fixed all styling and layout issues

--- a/src/components/WeatherBody.css
+++ b/src/components/WeatherBody.css
@@ -3,7 +3,6 @@
   border-radius: 1rem;
   padding: 1rem;
   color: rgb(17 24 39);
-  max-width: 800px;
   display: grid;
   grid-template-columns: repeat(5, minmax(0, 1fr));
 }
@@ -24,19 +23,20 @@
 }
 
 .other-details {
-  font-size: 1.2rem;
+  font-size: 1.25rem;
   font-weight: 600;
   padding: 1rem;
-  display: flex;
-  justify-content: space-between;
 }
 
 .other-details li {
   list-style: none;
+  display: flex;
+  justify-content: space-between;
+  gap: 4rem;
 }
 
 .weather-details {
-  padding: 0.5rem;
+  padding: 1.5rem 0.5rem;
   grid-column: span 3 / span 3;
 }
 
@@ -47,6 +47,7 @@
 .nav-items {
   display: flex;
   justify-content: space-between;
+  gap: 1rem;
   padding: 0 2rem;
 }
 
@@ -58,6 +59,7 @@
   border-bottom: 3px solid rgb(209, 213, 219);
   transition: 0.2s ease-in-out;
   cursor: pointer;
+  outline: none;
 }
 
 .nav-item:hover {
@@ -66,11 +68,27 @@
 
 .stats {
   padding: 1.5rem;
-  display: flex;
-  justify-content: space-between;
 }
 
 .stats li {
   list-style: none;
+  display: flex;
+  justify-content: space-between;
   padding: 0.5rem;
+}
+
+.active {
+  border-bottom: 3px solid rgb(17 24 39);
+}
+
+@media screen and (max-width: 768px) {
+  .weather-body {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .weather-summary {
+    border-right: 0;
+    border-bottom: 1px solid rgb(209, 213, 219);
+  }
 }
